RESOLVED FIXED305164
[Site Isolation] REGRESSION(304018@main): Triggers assertions in Site Isolation iOS API tests
https://bugs.webkit.org/show_bug.cgi?id=305164
Summary [Site Isolation] REGRESSION(304018@main): Triggers assertions in Site Isolati...
rupin
Reported 2026-01-08 17:07:03 PST
[Site Isolation] REGRESSION(304018@main): Triggers assertions in Site Isolation iOS API tests
Attachments
rupin
Comment 1 2026-01-08 17:07:09 PST
rupin
Comment 2 2026-01-08 17:26:51 PST
EWS
Comment 3 2026-01-09 10:22:04 PST
Committed 305369@main (3faa7e4c4945): <https://commits.webkit.org/305369@main> Reviewed commits have been landed. Closing PR #56300 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.